Testing fix on About page to fix images on mobile view.

--- a/src/components/style/About.css
+++ b/src/components/style/About.css
@@ -41,11 +41,41 @@
         color: rgba(51, 0, 102, 1);
         transition: .2s;
     }
+    .art_image{
+        height: 20rem;
+        width: 75%;
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin: 2% auto;
+        background-color: black;
+        transition: 1s;
+    }
     #slides_container {
         width: 100%;
         display: inline-block;
         margin: auto;
         float: left;
+    }
+
+
+    #art_container{
+        height: 30rem;
+        width: 30rem;
+        /* height: 50%; */
+        display: inline-block;
+        margin: auto;
+
+    }
+
+
+    .headline {
+        font-size: 2.5rem;
+    }
+
+
+    .art{
+        margin: 2%;;
     }
 }
 
